src/devtools/client/debugger/src/components/SecondaryPanes/Breakpoints/Breakpoint.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */

.breakpoints-pane > ._content {
  overflow-x: auto;
}

.empty-state-content {
  padding: 8px;
  white-space: pre-wrap;
}

.breakpoints-list *:focus:not(:focus-visible) {
  outline: none;
  background: inherit;
}

.breakpoints-list * {
  user-select: none;
}

.breakpoints-exceptions,
.breakpoints-exceptions-caught {
  display: flex;
  align-items: center;
  overflow: hidden;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-inline-start: 16px;
  padding-inline-end: 12px;
}

.breakpoints-list {
  padding: 8px 0px;
}

.breakpoints-list-source {
  margin: 0px 8px;
  border: 1px solid var(--theme-splitter-color);
  border-radius: 4px;
}

.breakpoints-list-source:not(:last-child) {
  margin-bottom: 8px;
}

.breakpoints-list .breakpoint {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  overflow: hidden;
  color: var(--theme-text-color-strong);
  position: relative;
  padding: 4px 8px;
  line-height: 16px;
}

.breakpoints-list .breakpoint:hover {
  background: var(--grey-20);
}

.breakpoints-list .breakpoint-heading {
  display: flex;
  flex-direction: row;
  width: 100%;
  font-size: 12px;
  line-height: 16px;
  padding: 4px 8px;
  justify-content: space-between;
  background-color: var(--theme-toolbar-background);
  color: var(--theme-text-color-strong);
  position: relative;
  cursor: pointer;
  overflow: hidden;
  border-bottom: 1px solid var(--theme-splitter-color);
}

.breakpoints-list .breakpoint-heading-label {
  display: flex;
  flex-direction: row;
  overflow: hidden;
  text-overflow: ellipsis;
}

.breakpoints-list .breakpoint-options {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  align-content: flex-start;
}

.breakpoints-list .breakpoint-options > * {
  display: flex;
  align-items: center;
  flex-direction: row;
}

.breakpoints-list .breakpoint-options > *:not(:last-child) {
  margin-bottom: 4px;
}

.breakpoints-list .breakpoint .breakpoint-line {
  color: var(--theme-comment);
}

.breakpoints-list .breakpoint:hover .breakpoint-line {
  display: none;
}

.breakpoints-list .breakpoint-label {
  display: inline-block;
  cursor: pointer;
  text-overflow: ellipsis;
  overflow: hidden;
  font-size: 11px;
  margin-top: 1px;
  margin-right: 1em;
  font-family: Menlo, Consolas, monospace;
  color: var(--blue-80);
}

.breakpoint .close-btn,
.breakpoint-heading .close-btn {
  display: none;
}

.breakpoint:hover .close-btn,
.breakpoint-heading:hover .close-btn {
  display: block;
}

.CodeMirror.cm-s-mozilla-breakpoint {
  cursor: pointer;
}

.CodeMirror.cm-s-mozilla-breakpoint .CodeMirror-lines {
  padding: 0;
}

.CodeMirror.cm-s-mozilla-breakpoint .CodeMirror-sizer {
  min-width: initial !important;
}

.breakpoints-list .breakpoint .CodeMirror.cm-s-mozilla-breakpoint {
  transition: opacity 0.15s linear;
}

.breakpoints-list .breakpoint.disabled .CodeMirror.cm-s-mozilla-breakpoint {
  opacity: 0.5;
}

.CodeMirror.cm-s-mozilla-breakpoint .CodeMirror-line span[role="presentation"] {
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  display: inline-block;
}

.CodeMirror.cm-s-mozilla-breakpoint .CodeMirror-code,
.CodeMirror.cm-s-mozilla-breakpoint .CodeMirror-scroll {
  pointer-events: none;
}

.CodeMirror.cm-s-mozilla-breakpoint {
  padding-top: 1px;
}

